Rename file data-prepration.ipynb

--- a/convert-to-categorical.ipynb
+++ b/convert-to-categorical.ipynb
@@ -4,20 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 1: Data Preperation\n",
+    "<h1 style=\"text-align: center\">Start of Program</h1>\n",
+    "\n",
     "***\n",
-    "\n",
-    "    Author: ASHISH GARG\n",
-    "    Date:   31 May 2021\n",
-    "\n",
-    "\n",
-    "## Program1: Check if data suitable to move forward\n",
+    "## Check if data suitable to move forward (categorical data)\n",
     "***\n",
     "\n",
     "In this program we are taking a sample university data where we have three fields (or variable). \n",
     "- <b>Name</b>: Name of the student.\n",
     "- <b>Rank</b>: Rank of the student.\n",
-    "- <b>IsJob</b>: Whether the student got placed in the job. (this is the class variable)"
+    "- <b>IsJob</b>: Whether the student got placed in the job. (this is the class variable)\n",
+    "\n",
+    "***\n",
+    "<p style=\" position: relative; bottom: 0; left: 0; width: 50%; text-align: left;\"> Author >> Ashish Garg\n",
+    "<p style=\" position: relative; bottom: 0; left: 0; width: 50%; text-align: left;\"> Date >>   31 May 2021"
    ]
   },
   {
@@ -985,25 +985,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***\n",
+    "<h1 style=\"text-align: center\">End of Program</h1>\n",
+    "\n",
+    "***"
+   ]
   }
  ],
  "metadata": {
